--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "type": "module",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "js-sha256": "^0.11.1"
   },
