fix: project structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "source.fixAll.eslint": "explicit"
   },
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "prettier.enableDebugLogs": false
+  "prettier.enableDebugLogs": false,
+  "cSpell.words": [
+    "ROBBE"
+  ]
 }
