--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,12 @@
     "source.fixAll": "explicit",
     "source.fixAll.eslint": "explicit"
   },
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
   "prettier.enableDebugLogs": false,
-  "cSpell.words": [
-    "ROBBE"
-  ]
+  "cSpell.words": ["PKCE", "Robb", "ROBBE"]
 }
