chore: prepare config for new oauth flow

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PORT_FE=8080
 PORT_BE=3000
 
 APPLICATION_CODE=1f071fae-6b8f-6890-97c0-aaa0fd990802
+APPLICATION_CLIENT_CODE=1f071fae-6b8f-6890-97c0-aaa0fd990802
+APPLICATION_CLIENT_SECRET=YOUR_SECRET_HERE
